--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,9 +1,9 @@
-.App {
-  text-align: center;
-}
+
+
 
 .App-logo {
   height: 40vmin;
+ 
   pointer-events: none;
 }
 
@@ -13,16 +13,16 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+
+
+.handleSumbit{
+
+  display: block;
+
+ 
 }
+
+
 
 .App-link {
   color: #61dafb;
