--- a/frontend/src/WalletCard.css
+++ b/frontend/src/WalletCard.css
@@ -1,22 +1,32 @@
+
+
+
 .walletCard {
-	margin: 1rem;
-	/*border: 1px solid black;
-	border-radius: 5px;*/
+	width: 50%;
 }
-.header {
-	padding: 60px;
-	text-align: center;
-	background: #1abc9c;
-	color: white;
-	font-size: 30px;
-  }
+
+
+
+
 .button {
 	background-color: #4CAF50; /* Green */
 	border: none;
+	border-radius: 15px ;
 	color: white;
 	padding: 15px 32px;
+	margin-top: 7px;
+	margin-bottom: 7px;
 	text-align: center;
 	text-decoration: none;
 	display: inline-block;
 	font-size: 16px;
   }
+
+
+
+
+@media only screen and (max-width: 1023px) {
+	.walletCard {
+		width: 100%;
+	}
+}
