--- a/frontend/src/style/Log.scss
+++ b/frontend/src/style/Log.scss
@@ -2,10 +2,11 @@
   border-radius: 3px;
   background: #222;
   color: #fff;
-  overflow: hidden;
+  overflow-x: hidden;
   position: relative;
   margin: 0 auto;
-  width: 70%;
+  width: 85%;
+  max-height: 65vh;
   
   &:before {
     content: ' ';
@@ -49,7 +50,6 @@
   .log {
     white-space: nowrap;
     overflow: hidden;
-    animation: write-log 5s both;
   }
 
   p:nth-child(2) {
