--- a/frontend/src/style/Log.scss
+++ b/frontend/src/style/Log.scss
@@ -4,7 +4,10 @@
   color: #fff;
   overflow-x: hidden;
   position: relative;
-  margin: 0 auto;
+  margin-top: 9vh;
+  margin-left: auto;
+  margin-right: auto;
+ 
   width: 85%;
   max-height: 65vh;
   
