--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -1,5 +1,24 @@
 
 
+.textheading{
+  text-align: center;
+  font-size: 3vh;
+}
+
+#submitSwap{
+  height: 50px;
+  margin-bottom: 10px;
+}
+
+
+.input{
+  height: 4vh;
+}
+
+::-webkit-input-placeholder{
+  font-size: 1.5vh;
+}
+
 
 .App-logo {
   height: 40vmin;
@@ -16,7 +35,7 @@
 
 
 .handleSumbit{
-
+  margin-top: 2vh;
   display: block;
 
  
