--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -12,11 +12,21 @@
 
 
 .input{
-  height: 4vh;
+  font-size: 1.5rem;
+  height: 6vh;
+  color: rgb(255, 255, 255) !important;
 }
 
-::-webkit-input-placeholder{
-  font-size: 1.5vh;
+input::-webkit-input-placeholder {
+  font-size: 1.5rem;
+}
+
+input:-ms-input-placeholder {
+  font-size: 1.5rem;
+}
+
+input::-moz-placeholder {
+  font-size: 1.5rem;
 }
 
 
