--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -14,7 +14,7 @@
 .input{
   font-size: 1.5rem;
   height: 6vh;
-  color: rgb(255, 255, 255) !important;
+  color: #333 !important;
 }
 
 input::-webkit-input-placeholder {
