--- a/frontend/src/style/WalletCard.css
+++ b/frontend/src/style/WalletCard.css
@@ -6,7 +6,8 @@
 }
 
 .displayWalletDetailsText{
-	font-size: 1.85vh;
+	font-size: 2.5vh;
+	color: grey;
 }
 .displayWalletDetails{
 	padding-bottom: 15px;
