integrated single step to frontend

--- a/frontend/src/style/Navbar.css
+++ b/frontend/src/style/Navbar.css
@@ -4,6 +4,11 @@
     background-color: #333;
     position: relative;
   }
+
+  .subheading{
+    padding-left: 5% !important;
+    color: red;
+  }
   
   
   
