--- a/frontend/src/style/Buttons.css
+++ b/frontend/src/style/Buttons.css
@@ -16,7 +16,8 @@
 #runSingle, #toggleStatus { 
     width: 85%; 
     display: inline;
-    margin: 5px;}
+    margin: 5px;
+}
 
 @media only screen and (max-width: 1023px) {
     #runSingle, #toggleStatus {
