--- a/frontend/src/style/Buttons.css
+++ b/frontend/src/style/Buttons.css
@@ -14,14 +14,14 @@
 }
 
 #runSingle, #toggleStatus { 
-    width: 85%; 
+    width: 95%; 
     display: inline;
     margin: 5px;
 }
 
-@media only screen and (max-width: 1023px) {
+/**@media only screen and (max-width: 1023px) {
     #runSingle, #toggleStatus {
         margin-top: 10; 
         width: 100%; 
         margin-left: 0;}
-  }
+  } **/
