--- a/frontend/src/style/WalletCard.css
+++ b/frontend/src/style/WalletCard.css
@@ -31,8 +31,8 @@
 
 
 
-@media only screen and (max-width: 1023px) {
+/*@media only screen and (max-width: 1023px) {
 	.walletCard {
 		width: 100%;
 	}
-}
+} **/
