--- a/frontend/src/style/DashboardGraph.css
+++ b/frontend/src/style/DashboardGraph.css
@@ -13,6 +13,13 @@
   margin-left: auto;
   margin-right: auto;
 }
+.headingDashboardGraph{
+    color: white;
+    padding-left: 10%;
+    padding-bottom: 5px;
+    font-size: 20px;
+    font-weight: 600;
+}
 
 #container {
     -webkit-box-sizing: border-box;
