single step disabling implemented

--- a/frontend/src/style/SingleStep.css
+++ b/frontend/src/style/SingleStep.css
@@ -35,6 +35,14 @@
     margin-top: 2vh;
 }
 
+#nextStep:disabled {
+    background-color: #333;
+}
+
+#stop:disabled {
+    background-color: #333;
+}
+
 #nextStep, #stop { 
     width: 95%; 
     display: inline;
