Made Loading message not clickable and green.

--- a/frontend/src/style/SingleStep.css
+++ b/frontend/src/style/SingleStep.css
@@ -39,6 +39,11 @@
     background-color: #333;
 }
 
+#loading:disabled {
+    background-color: #4CAF50;
+	color: white;
+}
+
 #stop:disabled {
     background-color: #333;
 }
