--- a/frontend/src/style/SettingsModal.css
+++ b/frontend/src/style/SettingsModal.css
@@ -4,9 +4,10 @@
     box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
     border-radius: 12px;
     position: absolute;
-    top: 47%;
     right: 10%;
     z-index: 100;
+    margin-top: 70px;
+    margin-right: 40px;
 }
 
 .settingsImage:hover
