--- a/frontend/src/style/Poolsize.css
+++ b/frontend/src/style/Poolsize.css
@@ -20,6 +20,8 @@
     margin-right: auto;
     min-width: 49%;
     margin-bottom: 15px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 
 }
 .displayPoolsizeBSC, .displayPoolsizeETH{
