--- a/frontend/src/style/ProgressOutline.css
+++ b/frontend/src/style/ProgressOutline.css
@@ -27,6 +27,7 @@ hr {
     margin-left: auto;
     margin-right: auto;
     border-radius: 16px;
+    margin-top: 4px;
 }
 .content{
     padding-top: 20px;
