--- a/frontend/src/style/Poolsize.css
+++ b/frontend/src/style/Poolsize.css
@@ -4,6 +4,23 @@
     margin-right: auto;
 }
 
+.textPoolsize{
+    display: inline-block;
+}
+
+.poolsizeButton{
+    background-color: whitesmoke;
+    vertical-align: bottom;
+    border-radius: 50%;
+    margin-right: 14px;
+    margin-left: 7px;
+}
+
+.poolsizeButtonPicture{
+    height: 15px;
+    margin: 10px;
+}
+
 .headingPoolsize{
     color: white;
     padding-bottom: 5px;
