refactor get/push

--- a/frontend/src/style/Log.css
+++ b/frontend/src/style/Log.css
@@ -2,7 +2,7 @@
   border-radius: 3px;
   border-radius: 20px;
   border: 1px solid rgb(255, 255, 255);
-  background-color: rgb(247, 248, 250);
+  background-color:  (247, 248, 250);
   color: black;
   overflow-x: hidden;
   position: relative;
