--- a/frontend/src/style/Poolsize.css
+++ b/frontend/src/style/Poolsize.css
@@ -30,7 +30,7 @@
     font-weight: 600;
 }
 
-.displayPoolsizeBSC, .displayPoolsizeETH, .abitrageWallet{
+.displayPoolsizeBSC, .displayPoolsizeETH, .abitrageWalletBsc, .abitrageWalletEth{
     color: black !important;
     background: rgb(255, 255, 255);
     box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px, rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
@@ -42,17 +42,6 @@
     padding-top: 8px;
     padding-bottom: 8px;
 
-}
-.displayPoolsizeBSC, .displayPoolsizeETH{
-    display: inline-block;
-}
-
-.displayPoolsizeBSC{
-    margin-right: 1%;
-}
-
-.displayPoolsizeETH{
-    margin-left: 1%;
 }
 
 .poolsizeSubHeading{
@@ -71,3 +60,16 @@
     font-style: italic;
 }
 
+@media only screen and (min-width: 1700px) {
+    .displayPoolsizeBSC, .displayPoolsizeETH, .abitrageWalletBsc, .abitrageWalletEth{
+        display: inline-block;
+    }
+
+    .displayPoolsizeBSC, .abitrageWalletBsc{
+    margin-right: 1%;
+    }
+
+    .displayPoolsizeETH, .abitrageWalletEth{
+    margin-left: 1%;
+    }   
+}
