added tooltips to explain displayed information

--- a/frontend/src/style/Poolsize.css
+++ b/frontend/src/style/Poolsize.css
@@ -73,3 +73,41 @@
     margin-left: 1%;
     }   
 }
+
+
+/* Tolltips to the dashboard */
+.tooltipdashboard {
+    position: relative;
+ 
+  }
+  
+  .tooltipdashboard .tooltiptext {
+
+    visibility: hidden;
+    width: 300px;
+    background-color: #203a4b;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 5px 0;
+    position: absolute;
+    z-index: 1;
+    top: -5px;
+ 
+    
+  }
+  
+  .tooltipdashboard:hover .tooltiptext {
+    visibility: visible;
+  }
+
+  .tooltipdashboard .tooltiptext::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    right: 100%;
+    margin-top: -5px;
+    border-width: 5px;
+    border-style: solid;
+    border-color: transparent #203a4b transparent transparent;
+  }
