--- a/frontend/src/style/App.css
+++ b/frontend/src/style/App.css
@@ -1,4 +1,25 @@
+.displayWalletDetailsText{
+	font-size: 2.5vh;
+	color: grey;
+}
+.displayWalletDetails{
+	padding-bottom: 15px;
+}
 
+
+.button {
+	background-color: #4CAF50; /* Green */
+	border: none;
+	border-radius: 15px ;
+	color: white;
+	padding: 15px 32px;
+	margin-top: 7px;
+	margin-bottom: 7px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+}
 
 .textheading{
   text-align: center;
